--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
               <a class="nav-link disabled" aria-disabled="true" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <a class="nav-link " aria-disabled="false">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-disabled="false" href="#">Check us out!</a>
             </li>
           </ul>
         </div>
@@ -43,10 +46,10 @@
             <div class="col-12 row" >
                 <div class="col-12 col-md-4">
                     <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                        <div class="card-body">
+                        <div class="card-body"> <!-- This is the Thermometer-->
+                          <div class="overlay-text" style="color: white;">Temperature Control</div>
                             <div class="image-container">
                               <i class="bi bi-thermometer text-info" style="font-size: 65px;" id="thermometer"></i>
-                                <div class="overlay-text">Temperature Control</div>
                                 <div class="slide-container">
                                     <div class="value-container">
                                         <span id="demo">45</span>
@@ -59,10 +62,11 @@
                 </div>
                 <div class="col-4">
                     <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                        <div class="card-body"> <!-- This is the Door -->
+                        <div class="card-body" style="align-items: center; "> <!-- This is the Door Needs aligning-->
+                          <div class="overlay-text" style="color: white;">Door Control</div>
                           <div class="image-container" id="btnDopen">
                             <button type="button" class="btn">
-                                <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="door" data-state="on"></i>
+                                <i class="bi bi-door-open text-warning" style="font-size: 65px; " id="door" data-state="on"></i>
                             </button>
                           </div>
                           <div class="image-container" id="btnLbOff" style="display: none;">
@@ -70,17 +74,31 @@
                                 <i class="bi bi-lightbulb-off"></i>
                             </button>
                           </div>
-                                <p>Door Control.</p>
-                                <div class="form-check form-switch">
-                                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                  <label class="form-check-label" for="flexSwitchCheckDefault">Door Control</label>
+                                <div class="form-check form-switch" style="text-align: center;">
+                                  <label class="form-check-label" for="flexSwitchCheckDefault" style="color: white;">Automatic Timer</label>
+                                  <input class="form-check-label" type="checkbox" role="switch" id="flexSwitchCheckDefault" style="height: auto; width: auto;">
+                                  <label for="doortime" style="color: white;">Choose an opening time:</label> 
+                                    <select name="OpenTime" id="DOpen"> 
+                                        <option value="7am">7:00 AM</option> 
+                                        <option value="8am">8:00 AM</option> 
+                                        <option value="9am">9:00 AM</option> 
+                                        <option value="10am">10:00 AM</option> 
+                                    </select>
+                                    <label for="doortimeclose" style="color: white;">Choose a closing time:</label> 
+                                    <select name="ClosedTime" id="DClosed"> 
+                                        <option value="6pm">6:00 PM</option> 
+                                        <option value="7pm">7:00 PM</option> 
+                                        <option value="8pm">8:00 PM</option> 
+                                        <option value="10pm">9:00 PM</option> 
+                                    </select>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-4">
                       <div class="card" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                          <div class="card-body">
+                          <div class="card-body" style="align-items: center;">
+                            <div class="overlay-text" style="color: white;">Light Control</div>
                               <div class="image-container" id="btnLbOn"> <!-- This is the light -->
                                   <button type="button" class="btn">
                                       <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
@@ -91,12 +109,23 @@
                                       <i class="bi bi-lightbulb-off"></i>
                                   </button>
                               </div>
-                              <div class="card-body" style="display: inline-block;">
-                                <p>Door Control.</p>
-                                <div class="form-check form-switch">
-                                  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                  <label class="form-check-label" style="color: white;" for="flexSwitchCheckDefault">Light on or off</label>
-                                </div>
+                              <div class="form-check form-switch" style="text-align: center;">
+                                <label class="form-check-label" for="flexSwitchCheckDefault" style="color: white;">Automatic Timer</label>
+                                <input class="form-check-label" type="checkbox" role="switch" id="flexSwitchCheckDefault" style="height: auto; width: auto;">
+                                <label for="lighttime" style="color: white;">Light On:</label> 
+                                  <select name="OpenTime" id="DOpen"> 
+                                      <option value="7am">7:00 AM</option> 
+                                      <option value="8am">8:00 AM</option> 
+                                      <option value="9am">9:00 AM</option> 
+                                      <option value="10am">10:00 AM</option> 
+                                  </select>
+                                  <label for="lightsoff" style="color: white;">Light Off:</label> 
+                                  <select name="ClosedTime" id="DClosed"> 
+                                      <option value="6pm">6:00 PM</option> 
+                                      <option value="7pm">7:00 PM</option> 
+                                      <option value="8pm">8:00 PM</option> 
+                                      <option value="10pm">9:00 PM</option> 
+                                  </select>
                               </div>
                           </div>
                       </div>
@@ -105,7 +134,8 @@
                 <div class="col-12 row" >
                   <div class="col-4">
                       <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                          <div class="card-body">
+                          <div class="card-body"> <!-- This is the Egg Counter-->
+                            <div class="overlay-text" style="color: white;">Egg Counter</div>
                               <div class="image-container">
                                 <i class="bi bi-egg-fill text-white" style="font-size: 65px;" id="egg"></i>
                                   <div>
@@ -121,21 +151,27 @@
                   </div>
                   <div class="col-4">
                       <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
-                          <div class="card-body"> <!-- This is the Light -->
-                            <div class="image-container" id="btnLbOn">
+                          <div class="card-body"> <!-- This is the feed -->
+                            <div class="overlay-text" style="color: white;">Feed</div>
+                            <div class="image-container" id="btnFeed">
                               <button type="button" class="btn">
-                                  <i class="bi bi-door-open text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                  <i class="bi bi-bag text-warning" style="font-size: 65px;" id="feed" data-state="on"></i>
                               </button>
                             </div>
-                            <div class="image-container" id="btnLbOff" style="display: none;">
+                            <div class="image-container" id="btnFeed" style="display: none;">
                               <button type="button" class="btn">
-                                  <i class="bi bi-lightbulb-off"></i>
+                                  <i class="bi bi-bag-x"></i>
                               </button>
                             </div>
-                                  <p>Door Control.</p>
                                   <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault">Door Control</label>
+                                    <label for="dog-names" style="color: white;">Automatic feeding:</label>
+                                    <input class="form-check-label" type="checkbox" role="switch" id="flexSwitchCheckDefault"> 
+                                  <select name="OpenTime" id="DOpen"> 
+                                      <option value="7am">7:00 AM</option> 
+                                      <option value="8am">8:00 AM</option> 
+                                      <option value="9am">9:00 AM</option> 
+                                      <option value="10am">10:00 AM</option> 
+                                  </select>
                                   </div>
                               </div>
                           </div>
@@ -143,23 +179,25 @@
                       <div class="col-4">
                         <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px;">
                             <div class="card-body">
-                                <div class="image-container" id="btnLbOn"> <!-- This is the door -->
+                              <div class="overlay-text" style="color: white;">Live Video</div>
+                                <div class="image-container" id="btnVon" style="justify-content: center;"> <!-- This Video Camera -->
                                     <button type="button" class="btn">
-                                        <i class="bi bi-lightbulb text-warning" style="font-size: 65px;" id="light" data-state="on"></i>
+                                        <i class="bi bi-camera-video-off text-warning" style="font-size: 65px;" id="video" data-state="on"></i>
                                     </button>
                                 </div>
-                                <div class="image-container" id="btnLbOff" style="display: none;">
+                                <div class="image-container" id="btnVon" style="display: none;">
                                     <button type="button" class="btn">
-                                        <i class="bi bi-lightbulb-off"></i>
+                                        <i class="bi bi-camera-video"></i>
                                     </button>
+                                    <button>
+                                      <i class bi bi-collection-play></i>
+                                    </button>
+                                    <video >
+                                      <source src="videoplayback.mp4" autoplay muted controls>
+
+                                    </video>
                                 </div>
-                                <div class="card-body" style="display: inline-block;">
-                                  <p>Door Control.</p>
-                                  <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" style="color: white;" for="flexSwitchCheckDefault">Light on or off</label>
-                                  </div>
-                                </div>
+                              </div>
                             </div>
                         </div>
                     </div>
@@ -335,6 +373,38 @@
                 $('#door').addClass('bi bi-door-open');
                 $('#door').removeClass('bi bi-door-closed');
                 $('#door').addClass('text-warning');
+            }
+          })
+
+          //Feed
+        $('#btnFeed').on('click',function(){
+            let strState = $(this).attr('data-state');
+            if(strState == 'on'){
+                $('#btnFeed').attr('data-state','off');
+                $('#feed').addClass('bi bi-bag-x');
+                $('#feed').removeClass('bi bi-bag');
+                $('#feed').removeClass('text-warning');
+            } else {
+                $('#btnFeed').attr('data-state','on');
+                $('#feed').addClass('bi bi-bag');
+                $('#feed').removeClass('bi bi-bag-x');
+                $('#feed').addClass('text-warning');
+            }
+          })
+
+          //Camera
+        $('#btnVon').on('click',function(){
+            let strState = $(this).attr('data-state');
+            if(strState == 'on'){
+                $('#btnVon').attr('data-state','off');
+                $('#video').addClass('bi bi-camera-video');
+                $('#video').removeClass('bi bi-camera-video-off');
+                $('#video').removeClass('text-white');
+            } else {
+                $('#btnVon').attr('data-state','on');
+                $('#video').addClass('bi bi-camera-video-off');
+                $('#video').removeClass('bi bi-camera-video');
+                $('#video').addClass('text-warning');
             }
           })
 
