Changed one thing

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         <div class="card mt-5" style="background-color: rgb(77, 127, 110); min-height: 275px; align-items: center;">
                             <div class="card-body">
                               <div class="overlay-text" style="color: white;">Live Video</div>
-                                <div class="d-flex justify-content-center" style="margin-top: 25%;" id="btnVon"> <!-- This Video Camera -->
+                                <div class="d-flex justify-content-center" style="margin-top: 25%;" id="btnVon"> <!-- This Video Camera settings -->
                                     <button type="button" aria-label="Video On" class="btn col-12 text-center">
                                         <i class="bi bi-camera-video-off text-warning" style="font-size: 65px;" id="video" data-state="on"></i>
                                     </button>
